Fix the missing JVM args in GeneratorBenchmark