@@ -34,12 +34,31 @@ import org.openjdk.jmh.annotations.Warmup;
  * @see CombinationGeneratorTask
  * @since 2025.12 - JMH Benchmarking
  */
+@State(Scope.Benchmark)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
 @Warmup(iterations = 5, time = 1, timeUnit = TimeUnit.SECONDS)
 @Measurement(iterations = 5, time = 1, timeUnit = TimeUnit.SECONDS)
-@Fork(3)
-@State(Scope.Benchmark)
+@Fork(value = 3, jvmArgsAppend = {
+    "--enable-preview",
+    "-XX:+UseG1GC",
+    "-Xms2g", "-Xmx8g",
+    "-XX:GCTimeRatio=19",
+    "-XX:MaxInlineSize=70", "-XX:FreqInlineSize=650",
+    "-XX:InlineSmallCode=5000", "-XX:MaxInlineLevel=20",
+    "-XX:CompileThreshold=5000", "-XX:Tier3CompileThreshold=1000", "-XX:Tier4CompileThreshold=7500",
+    "-XX:+UnlockExperimentalVMOptions", "-XX:+EnableVectorSupport", "-XX:+EnableVectorReboxing", "-XX:+EnableVectorAggressiveReboxing",
+    "-XX:MaxVectorSize=32", "-XX:+AlignVector",
+    "-XX:+UseTLAB", "-XX:TLABSize=512k", "-XX:+ResizeTLAB", "-XX:TLABWasteTargetPercent=5",
+    "-XX:+AlwaysPreTouch",
+    "-XX:+EliminateAllocations", "-XX:+EliminateAutoBox", "-XX:EliminateAllocationArraySizeLimit=128",
+    "-XX:MaxGCPauseMillis=100", "-XX:G1NewSizePercent=40", "-XX:G1MaxNewSizePercent=80",
+    "-XX:G1HeapRegionSize=16m", "-XX:G1MixedGCCountTarget=4", "-XX:+G1UseAdaptiveIHOP",
+    "-XX:+UseThreadPriorities", "-XX:+UseCriticalCompilerThreadPriority",
+    "-XX:+UseDynamicNumberOfCompilerThreads", "-XX:CICompilerCount=16",
+    "-XX:PerMethodTrapLimit=200", "-XX:PerBytecodeTrapLimit=8", "-XX:PerMethodRecompilationCutoff=800",
+    "-XX:+UseCountLeadingZerosInstruction", "-XX:+UseCountTrailingZerosInstruction"
+})
 public class GeneratorBenchmark {
 
     private CombinationGeneratorTask taskFastPath;
